# f1-data-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/: star_schema.md
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: mart_circuit_stats.sql  mart_driver_performance.sql  mart_season_overview.sql  mart_team_performance.sql  schema.yml
dbt/models/staging/: schema.yml  stg_circuits.sql  stg_constructors.sql  stg_drivers.sql  stg_pit_stops.sql  stg_qualifying.sql  stg_races.sql  stg_results.sql
notebooks/: F1_Analysis.ipynb  analysis.py
src/: __init__.py  analysis.py  cleaning.py  ingestion.py  modeling.py  pipeline.py  transformation.py
tests/: __init__.py  test_cleaning.py  test_ingestion.py  test_transformation.py
